Doc/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/OP4I_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Contract_Id__c</fullName>
    <description>BIZ-61300</description>
    <label>OP4I Contract Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>