Doc/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/OP4I_Deal_id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_id__c</fullName>
    <description>Custom Field built as per BIZ-49856</description>
    <formula>SBQQ__Quote__r.OP4IDealID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4I Deal Id</label>
    <type>Text</type>
</CustomField>