Doc/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/OP4I_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Document_Id__c</fullName>
    <label>OP4I Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>