Doc/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Quote_ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>Quote_ApprovalStatus__c</fullName>
    <label>Quote_ApprovalStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>