Doc/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Sync_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Field built as per BIZ-49856</description>
    <label>Sync NetSuite</label>
    <type>Checkbox</type>
</CustomField>